# Distributed-MLOps

./: CMakeLists.txt  README.md  async_surveillance.cpp  cctv_surveillance.cpp  docker-compose.yml  feature_store.py  ingestion_engine.py  locustfile.py  mlops-ci.yml  model_server.py  prometheus.yml  quantize_model.py  steps.txt
